[package]
name = "awdy"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/beebeeep/awdy"
description = "TUI task tracker"
license = "MIT"
keywords = ["tui", "task-tracker"]

[dependencies]
anyhow = "1.0.100"
clap = "4.5.54"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "=0.29.0", features = ["all-widgets", "unstable-widget-ref"] }
rusqlite = "0.38.0"
tui-textarea = "0.7.0"
tui-widget-list = "=0.13.3"
